# Trading212-API

./: .gitignore  CFD_LIST.json  CFD_scrape.py  LICENSE  README.md  config.toml  main.py  pyproject.toml  setup.py  user_settings.json
.github/workflows/: python-publish .yml
apit212/: __init__.py  api_tickers.csv  apit212.py  apiv2.py  constant.py  getticker.py  helpers.py  logs.py  setup.py  trading212.py  utils.py
apit212_legacy/:  CFD_Scrape.py  Constant.py  README.md
src/apitConnect/: auth.py  client.py  connector.py  session.py
src/apitConnect/core/: __init__.py  client.py
src/apitConnect/core/auth/: __init__.py  inputs.py  login.py  session.py
src/apitConnect/core/browser/: __init__.py  launcher.py  shutdown.py
src/apitConnect/core/endpoint/: __init__.py  endpoints.py
src/apitConnect/core/network/: api.py  headers.py  supervisor.py
src/apitConnect/event/: __init__.py  eventBus.py  events.py
src/apitConnect/fetch/: account.py  supported_tickers.py  value.py
src/apitConnect/models/: model.py  websocket.py
src/apitConnect/pipeline/: websocket.py
src/apitConnect/service/: apiService.py
src/apitConnect/ui/console/: __init__.py  base.py  dashboard.py  spinner.py
src/gui/: __init__.py  app.py  styles.py
src/gui/views/: bot.py  dashboard.py  login.py  portfolio.py  settings.py
src/tui/: terminal.py
src/web/: server.py
test/: CFDtest.py
tests/: implement.py
